# ariaflow

./: .gitignore  AGENT.md  AGENTS.md  AI-USAGE.md  ARCHITECTURE.md  BGS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GAPS.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  openapi.yaml  pyproject.toml
.claude/: settings.json
.github/: NO_AI_TRAINING.md
.github/workflows/: macos-install.yml  release.yml  test.yml
docs/: ALL_VARIABLES.md  ARCHITECTURE.md  ARIA2_RPC_WRAPPERS.md  AUDIT.md  BACKEND_GAPS_REQUESTED_BY_FRONTEND.md  BUGFIX_PLAN.md  CODING_RULES.md  FRONTEND-GUIDE.md  GAPS-RENAME.md  GAPS.md  GOAL.md  NAMING_GAPS.md  PLAN.md  REFACTOR_PLAN.md  RELEASE.md  SPEC.md  STATES_AND_INTERACTIONS.md
docs/governance/: BGS.md  asm-state-model.md  bgs-decision.yaml  biss-classification.md  tic-oracle.md
scripts/: check_api_surface.py  check_bgs_drift.py  check_concepts.py  check_coverage.py  check_declaration_drift.py  check_spec.py  check_tic_coverage.py  gen_all_variables.py  gen_openapi.py  gen_rpc_docs.py  gen_spec.py  homebrew_formula.py  publish.py  release.py
src/aria_queue/: __init__.py  api.py  aria2_rpc.py  bandwidth.py  bonjour.py  cli.py  contracts.py  core.py  discovery.py  install.py  openapi.yaml  openapi_schemas.py  queue_ops.py  state.py  (+7 more)
tests/: conftest.py  test_api.py  test_api_coverage.py  test_aria2_rpc_wrappers.py  test_cli.py  test_cross_check.py  test_homebrew_formula.py  test_naming_conventions.py  test_new_features.py  test_platform.py  test_regressions.py  test_release.py  test_scenarios.py  test_tic.py  test_unit.py  test_web.py
(+43 files in other folders)
