[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-queue"
version = "0.1.0"
description = "Sequential aria2 queue driver with adaptive bandwidth control"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aria-queue = "aria_queue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

